--- a/Javascript_Tutorial.tex
+++ b/Javascript_Tutorial.tex
@@ -3999,13 +3999,16 @@ Let us review what we have learned about the \colorbox{lightgray}{async...await}
 \item We should still take advantage of concurrency by writing \colorbox{lightgray}{async} functions that allow asynchronous actions to happen in concurrently whenever possible.
 \end{itemize}
 
-
-
-
-
 \newpage
 \section{Requests}
-
+\subsection{Introduction to Requests}
+Have you ever wondered what happens after you click a “Submit” button on a web page? For instance, if you are submitting information, where does the information go? How is the information processed? The answer to the previous questions revolves around \textit{HTTP} requests. \\
+\newline
+There are many types of HTTP requests. The four most commonly used types of HTTP requests are GET, POST, PUT, and DELETE. In this chapter, we will cover GET and POST requests. If you want to learn more about the different HTTP requests, we recommend the following documentation: \href{https://developer.mozilla.org/en-US/docs/Web/HTTP/Methods}{Mozilla Developer Network: HTTP methods}. \\
+\newline
+With a GET request, we are retrieving, or getting, information from some source (usually a website). For a POST request, we are posting information to a source that will process the information and send it back. In this lesson, we will explain how to make GET and POST requests by using JavaScript’s \textbf{XHR} object. We will also incorporate query strings into our requests. \\
+\newline
+We will use the Datamuse API for GET requests and the Rebrandly URL Shortener API for POST requests. To complete the exercise on POST, make sure you create a Rebrandly API Key by following the instructions in the article: \href{https://www.codecademy.com/articles/rebrandly-signup}{Codecademy Articles: Rebrandly URL Shortener API}.
 
 
 
