--- a/Javascript_Tutorial.tex
+++ b/Javascript_Tutorial.tex
@@ -4010,8 +4010,252 @@ With a GET request, we are retrieving, or getting, information from some source 
 \newline
 We will use the Datamuse API for GET requests and the Rebrandly URL Shortener API for POST requests. To complete the exercise on POST, make sure you create a Rebrandly API Key by following the instructions in the article: \href{https://www.codecademy.com/articles/rebrandly-signup}{Codecademy Articles: Rebrandly URL Shortener API}.
 
+\subsection{HTTP Requests}
+One of JavaScript’s greatest assets is its non-blocking properties, or that it is an \textit{asynchronous} language. \\
+\newline
+Websites, like newspaper websites, take advantage of these non-blocking properties to provide a better user experience. Generally, a site’s code is written so that users do not have to wait for a giant image to load before being allowed to read the actual article—rather, that text is rendered first and then the image can load in the background. \\
+\newline
+JavaScript uses an \textit{event loop} to handle asynchronous function calls. When a program is run, function calls are made and added to a stack. The functions that make requests that need to wait for servers to respond then get sent to a separate queue. Once the stack has cleared, then the functions in the queue are executed. \\
+\newline
+Web developers use the event loop to create a smoother browsing experience by deciding when to call functions and how to handle asynchronous events. We will be exploring one system of technologies called Asynchronous JavaScript and XML, or AJAX. To read more about the event loop, read the MDN documentation: \href{https://developer.mozilla.org/en-US/docs/Web/JavaScript/EventLoop}{MDN Documentation: Event Loop}. 
+\begin{lstlisting}
+console.log("First message!");
+setTimeout(() => {
+   console.log("This message will always run last...");
+}, 0);
+console.log("Second message!");
+\end{lstlisting}
+\begin{lstlisting}[basicstyle=\small\ttfamily\color{theWhite}, backgroundcolor = \color{theBlack}, language = Comment]
+First message!
+Second message!
+This message will always run last...
+\end{lstlisting}
 
+\subsection{XHR GET Requests}
+Asynchronous JavaScript and XML (AJAX), enables requests to be made after the initial page load. Initially, AJAX was used only for XML formatted data, now it can be used to make requests that have many different formats. \href{https://developer.mozilla.org/en-US/docs/Web/XML/XML_introduction}{MDN Documentation: Extensible Markup Language (XML)} \\
+\newline
+Similarly, the XMLHttpRequest (XHR) API, named for XML, can be used to make many kinds of requests and supports other forms of data. Remember, we use GET to retrieve data from a source. Take a look at the boilerplate code in the diagram to see how to make an XHR GET request.
+\begin{figure}[H]
+\includegraphics[scale = 0.43]{17_1}
+\centering
+\end{figure}
+\begin{lstlisting}
+const xhr = new XMLHttpRequest(); 
+const url = "https://api-to-call.com/endpoint";
 
+xhr.responseType = 'json'; 
+xhr.onreadystatechange = () => {
+  if (xhr.readyState === XMLHttpRequest.DONE) {
+    // The purpose of this conditional statement checks to see if the request has finished.
+    return xhr.response; 
+  }
+}
+
+xhr.open("GET", url); 
+// creates a new request and the arguments passed in determine the type and URL of the request.
+xhr.send(); 
+\end{lstlisting}
+\subsubsection{Find Words that Rhyme}
+By this point, we have an idea of how to write the boilerplate code for an AJAX request using an XHR object. Now we will incorporate that boilerplate code to make a GET request to the \href{https://www.datamuse.com/api/}{Datamuse API} to search for words that rhyme. 
+\begin{lstlisting}
+// Information to reach API
+const url = "https://api.datamuse.com/words?"
+// Use this URL to direct our request.
+
+const queryParams = "rel_rhy=";
+//"rel_rhy=" is the start of a parameter for the query string. This parameter will narrow our search to words that rhyme.
+
+// Selecting page elements
+const inputField = document.querySelector("#input");
+const submit = document.querySelector("#submit");
+const responseField = document.querySelector("#responseField");
+
+// AJAX function
+const getSuggestions = () => {
+  const wordQuery = inputField.value; 
+  const endpoint = url + queryParams + wordQuery; 
+  // endpoint will store the value of the entire URL and query string.
+  const xhr = new XMLHttpRequest(); 
+  xhr.responseType = "json";
+  // When data is sent back, it will be in JSON format.
+  xhr.onreadystatechange = () => {
+    if (xhr.readyState === XMLHttpRequest.DONE) {
+      renderResponse(xhr.response)
+    }
+  }
+  xhr.open("GET", endpoint); 
+  xhr.send(); 
+}
+
+// Clear previous results and display results to webpage
+const displaySuggestions = (event) => {
+  event.preventDefault();
+  while(responseField.firstChild){
+    responseField.removeChild(responseField.firstChild);
+  };
+  getSuggestions();
+}
+
+submit.addEventListener("click", displaySuggestions);
+\end{lstlisting}
+\begin{figure}[H]
+\includegraphics[scale = 0.54]{17_2}
+\centering
+\end{figure}
+\subsubsection{Find Adjectives}
+Now let us create a request to set a topic and find adjectives that describe the input word using query strings. A \href{https://en.wikipedia.org/wiki/Query_string}{query string} contains additional information to be sent with a request. The Datamuse API allows us to retrieve more specific data with query strings attached to the request URL. \\
+\newline
+A query string is separated from the URL using a \colorbox{lightgray}{?} character. After \colorbox{lightgray}{?}, you can then create a parameter which is a key value pair joined by a \colorbox{lightgray}{$=$}. Examine the example below:
+\begin{lstlisting}[basicstyle=\small\ttfamily\color{theWhite}, backgroundcolor = \color{theBlack}, language = Comment]
+"https://api.datamuse.com/words?key=value"
+\end{lstlisting}
+If you want to add an additional parameter you will have to use the \colorbox{lightgray}{\&} character to separate your parameters. Like so:
+\begin{lstlisting}[basicstyle=\small\ttfamily\color{theWhite}, backgroundcolor = \color{theBlack}, language = Comment]
+"https://api.datamuse.com/words?key=value&anotherKey=anotherValue"
+\end{lstlisting}
+\begin{lstlisting}
+// Information to reach API
+const url = "https://api.datamuse.com/words?";
+const queryParams = "rel_jjb=";
+const additionalParams = "&topics=";
+// Reminder: the & character at the start of the string is used to separate our parameters. The = character will join the key 'topics' to a value.
+
+// Selecting page elements
+const inputField = document.querySelector("#input");
+const topicField = document.querySelector("#topic");
+const submit = document.querySelector("#submit");
+const responseField = document.querySelector("#responseField");
+
+// AJAX function
+const getSuggestions = () => {
+  const wordQuery = inputField.value;
+  const topicQuery = topicField.value; 
+  const endpoint = (*@\texttt{\textasciigrave}@*)${url}${queryParams}${wordQuery}${additionalParams}${topicQuery}(*@\texttt{\textasciigrave}@*);
+  
+  const xhr = new XMLHttpRequest();
+  xhr.responseType = "json";
+
+  xhr.onreadystatechange = () => {
+    if (xhr.readyState === XMLHttpRequest.DONE) {
+      renderResponse(xhr.response);
+    }
+  }
+  
+  xhr.open("GET", endpoint);
+  xhr.send();
+}
+
+// Clear previous results and display results to webpage
+const displaySuggestions = (event) => {
+  event.preventDefault();
+  while(responseField.firstChild){
+    responseField.removeChild(responseField.firstChild);
+  }
+  getSuggestions();
+}
+
+submit.addEventListener("click", displaySuggestions);
+\end{lstlisting}
+\begin{figure}[H]
+\includegraphics[scale = 0.54]{17_3}
+\centering
+\end{figure}
+
+\subsection{XHR POST Requests}
+To signed up for an API Key from Rebrandly, please read this \href{https://www.codecademy.com/articles/rebrandly-signup}{Rebrandly sign up guide}. By this point we will be making a POST request using the Rebrandly API. \\
+\newline
+The major difference between a GET request and POST request is that a POST request requires additional information to be sent through the request. This additional information is sent in the \textit{body} of the post request.
+\begin{figure}[H]
+\includegraphics[scale = 0.42]{17_4}
+\centering
+\end{figure}
+See below the boilerplate code for an AJAX \colorbox{lightgray}{POST} request using an \colorbox{lightgray}{XMLHttpRequest} object.
+\begin{lstlisting}
+const xhr = new XMLHttpRequest(); 
+const url = "https://api-to-call.com/endpoint";
+const data = JSON.stringify({id: "200"});
+// JSON.stringify() will convert a value to a JSON string. By converting the value to a string, we can then send the data to a server.
+xhr.responseType = "json"; 
+xhr.onreadystatechange = () => {
+  // .onreadystatechange will contain the event handler that will be called when xhr's state changes.
+  if (xhr.readyState === XMLHttpRequest.DONE) {
+    return xhr.response; 
+    // The response property will contain the data that we get back from the POST request.
+  }
+}
+xhr.open("POST", url); 
+// .open() creates a new request and the arguments passed in determine what type of request is being made and where it is being made to.
+xhr.send(data); 
+// .send() will send the request to the server.
+\end{lstlisting}
+
+Now let us make a POST request to the Rebrandly API to shorten a URL. We will use our API Key. 
+\begin{lstlisting}
+// Information to reach API
+const apiKey = "798b6253a27d4900a4232c106c01a026";
+const url = "https://api.rebrandly.com/v1/links";
+
+// Some page elements
+const inputField = document.querySelector("#input");
+const shortenButton = document.querySelector("#shorten");
+const responseField = document.querySelector("#responseField");
+
+// AJAX functions
+const shortenUrl = () => {
+  const urlToShorten = inputField.value; 
+  // urlToShorten will now save the value of the input field
+  const data = JSON.stringify({destination: urlToShorten});
+  // We are including this information because the API expects to see an object with a key destination that has a value of a URL.
+  const xhr = new XMLHttpRequest(); 
+  xhr.responseType = "json"; 
+  xhr.onreadystatechange = () => {
+    if (xhr.readyState === XMLHttpRequest.DONE) {
+      renderResponse(xhr.response);
+    }
+  }
+  xhr.open("POST", url); 
+   // To access the Rebrandly API, we need a header with two key-value pairs. In the header, you must include values for "Content-type" and an "apikey". To set the header, we have to include the following code below our .open() method.
+  xhr.setRequestHeader("Content-type", "application/json");
+  xhr.setRequestHeader("apikey", apiKey);
+  xhr.send(data); 
+}
+
+// Clear page and call AJAX functions
+const displayShortUrl = (event) => {
+  event.preventDefault();
+  while(responseField.firstChild){
+    responseField.removeChild(responseField.firstChild);
+  }
+  shortenUrl();
+}
+
+shortenButton.addEventListener("click", displayShortUrl);
+\end{lstlisting}
+\newpage
+Enter this URL into the input field, and click the shorten button in the web page.
+\begin{lstlisting}[basicstyle=\small\ttfamily\color{theWhite}, backgroundcolor = \color{theBlack}, language = Comment]
+https://medium.com/@codecademy/breaking-the-coding-language-barrier-bf24652c3c60
+\end{lstlisting}
+
+\begin{figure}[H]
+\includegraphics[scale = 0.5]{17_5}
+\centering
+\end{figure}
+
+\subsection{Review Requests}
+Let us review XHR GET and POST requests.
+\begin{itemize}[leftmargin = *]
+\item JavaScript is the language of the web because of its asynchronous capabilities. AJAX, which stands for Asynchronous JavaScript and XML, is a set of tools that are used together to take advantage of JavaScript’s asynchronous capabilities.
+\item There are many HTTP request methods, two of which are GET and POST.
+\item GET requests only request information from other sources.
+\item POST methods can introduce new information to other sources in addition to requesting it.
+\item GET requests can be written using an XMLHttpRequest object and vanilla JavaScript.
+\item POST requests can also be written using an XMLHttpRequest object and vanilla JavaScript.
+\item Writing GET and POST requests with XHR objects and vanilla JavaScript requires constructing the XHR object using \colorbox{lightgray}{new}, setting the \colorbox{lightgray}{responseType}, creating a function that will handle the response object, and opening and sending the request.
+\item To add a query string to a URL endpoint you can use \colorbox{lightgray}{?} and include a parameter.
+\item To provide additional parameters, use \colorbox{lightgray}{\&} and then include a key-value pair, joined by \colorbox{lightgray}{$=$}.
+\item Determining how to correctly write the requests and how to properly implement them requires carefully reading the documentation of the API with which we are working.
+\end{itemize}
 
 
 \end{document}
