--- a/Javascript_Tutorial.tex
+++ b/Javascript_Tutorial.tex
@@ -4000,7 +4000,7 @@ Let us review what we have learned about the \colorbox{lightgray}{async...await}
 \end{itemize}
 
 \newpage
-\section{Requests}
+\section{Requests I}
 \subsection{Introduction to Requests}
 Have you ever wondered what happens after you click a “Submit” button on a web page? For instance, if you are submitting information, where does the information go? How is the information processed? The answer to the previous questions revolves around \textit{HTTP} requests. \\
 \newline
@@ -4256,6 +4256,11 @@ Let us review XHR GET and POST requests.
 \item To provide additional parameters, use \colorbox{lightgray}{\&} and then include a key-value pair, joined by \colorbox{lightgray}{$=$}.
 \item Determining how to correctly write the requests and how to properly implement them requires carefully reading the documentation of the API with which we are working.
 \end{itemize}
+
+\newpage
+\section{Requests II}
+
+
 
 
 \end{document}
