--- a/Javascript_Tutorial.tex
+++ b/Javascript_Tutorial.tex
@@ -4036,7 +4036,7 @@ Asynchronous JavaScript and XML (AJAX), enables requests to be made after the in
 \newline
 Similarly, the XMLHttpRequest (XHR) API, named for XML, can be used to make many kinds of requests and supports other forms of data. Remember, we use GET to retrieve data from a source. Take a look at the boilerplate code in the diagram to see how to make an XHR GET request.
 \begin{figure}[H]
-\includegraphics[scale = 0.43]{17_1}
+\includegraphics[scale = 0.35]{17_1}
 \centering
 \end{figure}
 \begin{lstlisting}
@@ -4166,7 +4166,7 @@ To signed up for an API Key from Rebrandly, please read this \href{https://www.c
 \newline
 The major difference between a GET request and POST request is that a POST request requires additional information to be sent through the request. This additional information is sent in the \textit{body} of the post request.
 \begin{figure}[H]
-\includegraphics[scale = 0.42]{17_4}
+\includegraphics[scale = 0.4]{17_4}
 \centering
 \end{figure}
 See below the boilerplate code for an AJAX \colorbox{lightgray}{POST} request using an \colorbox{lightgray}{XMLHttpRequest} object.
@@ -4259,8 +4259,46 @@ Let us review XHR GET and POST requests.
 
 \newpage
 \section{Requests II}
+\subsection{Introduction to Requests with ES6}
+Previously, we spent a lot of time dealing with asynchronous data (remember AJAX/ Asynchronous JavaScript And XML?). Many of our web page interactions rely on asynchronous events, so managing these events is essential to good web development.
 
+To make asynchronous event handling easier, \href{https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise}{promises} were introduced in JavaScript in ES6. A promise is an object that handles asynchronous data. A promise has three states: 
+\begin{itemize}[leftmargin = *]
+\item \textit{pending}: when a promise is created or waiting for data.
+\item \textit{fulfilled}: the asynchronous operation was handled successfully.
+\item \textit{rejected}: the asynchronous operation was unsuccessful.
+\end{itemize}
+The great thing about promises is that once a promise is fulfilled or rejected, you can chain an additional method to the original promise. \\
+\newline
+Here we will explain how to use \colorbox{lightgray}{fetch()}, which uses promises to handle requests. Then, we will simplify requests using \colorbox{lightgray}{async} and \colorbox{lightgray}{await}. We will use the Datamuse API for GET requests and Rebrandly URL Shortener API for POST requests. 
 
-
+\subsection{fetch() GET Requests}
+The first type of requests we’re going to tackle are GET requests using \colorbox{lightgray}{fetch()}. Please check out the documentation \href{https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API}{MDN: Fetch API}. \\
+\newline
+The \colorbox{lightgray}{fetch()} function:
+\begin{itemize}[leftmargin = *]
+\item Creates a request object that contains relevant information that an API needs.
+\item Sends that request object to the API endpoint provided.
+\item Returns a promise that ultimately resolves to a response object, which contains the status of the promise with information the API sent back.
+\end{itemize}
+\begin{figure}[H]
+\includegraphics[scale = 0.35]{18_1}
+\centering
+\end{figure}
+Let us reconstruct the boilerplate code necessary to create a GET request using the \colorbox{lightgray}{fetch()} function step-by-step.
+\begin{lstlisting}
+fetch("https://api-to-call.com/endpoint").then(response => {
+  if (response.ok) {
+    return response.json(); 
+  }
+  throw new Error("Request failed!");
+}, networkError => {
+  // If we could not reach the endpoint at all, e.g., the server is down, then we would get this networkError.
+  console.log(networkError.message);
+}).then(jsonResponse => {
+  // The second .then()'s success callback won't run until the previous .then() method has finished running. It will also not run if there was an error was thrown previously.
+  return jsonResponse; 
+}) 
+\end{lstlisting}
 
 \end{document}
